working documentation target

--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -22,3 +22,10 @@ option(BUILD_TESTS "Build tests" ON)
 if(BUILD_TESTS)
 	include(cmake/testing.cmake)
 endif()
+
+#--------------
+# documentation
+option(BUILD_DOC "Build doc" ON)
+if(BUILD_DOC)
+	add_subdirectory(documentation)
+endif()
