2 - fix includes into locals

--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -25,7 +25,7 @@ endif()
 
 #--------------
 # documentation
-option(BUILD_DOC "Build doc" ON)
+option(BUILD_DOC "Build documentation" ON)
 if(BUILD_DOC)
 	add_subdirectory(documentation)
 endif()
