--- a/src/configuration/CMakeLists.txt
+++ b/src/configuration/CMakeLists.txt
@@ -1,13 +1,4 @@
-add_library(configuration INTERFACE)
-
-target_include_directories(configuration
-    INTERFACE
-        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-        $<INSTALL_INTERFACE:include>
+include(../../cmake/add_simple_library.cmake)
+Add_Simple_Library(configuration 
+	INTERFACE
 )
-
-target_link_libraries(configuration
-    INTERFACE RapidJSON::rapidjson
-)
-
-add_library(${PROJECT_NAME}::configuration ALIAS configuration)
