--- a/src/configuration/test/CMakeLists.txt
+++ b/src/configuration/test/CMakeLists.txt
@@ -1,21 +1,6 @@
-include(GoogleTest)
-
-file(GLOB CONFIGURATION_TEST_SRC "./*.cpp")
-
-add_executable( configuration_test 
-	${CONFIGURATION_TEST_SRC}
+include(../../../cmake/add_simple_test.cmake)
+Add_Simple_Googletest_Target(configuration_test
+	RapidJSON::rapidjson
+	${PROJECT_NAME}::configuration
+	OUtils::utils
 )
-
-target_include_directories(configuration_test
-	PUBLIC
-		$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
-		$<INSTALL_INTERFACE:include>
-)
-
-target_link_libraries(configuration_test
-	PRIVATE GTest::gtest_main
-	PRIVATE ${PROJECT_NAME}::configuration
-	PRIVATE RapidJSON::rapidjson
-)
-
-gtest_discover_tests(configuration_test)
