--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -7,9 +7,21 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
 #-------
 # setups
-include(cmake/locals.cmake)
-include(cmake/compiler_option.cmake)
-include(cmake/rapidjson.cmake)
+include(cmake/generate_locals.cmake)
+include(cmake/compiler_warning.cmake)
+include(cmake/simple_fetch_populate.cmake)
+include(cmake/simple_fetch_repository.cmake)
+Simple_Fetch_Repository(
+	OUtils
+	https://github.com/leocity207/OUtils.git
+	V0.0.1
+)
+Simple_Fetch_Populate(
+	rapdijson
+	https://github.com/Tencent/rapidjson.git
+	v1.1.0
+	RapidJSON::rapidjson
+)
 
 
 #---------------------
@@ -20,7 +32,8 @@ add_subdirectory(src/configuration)
 # tests
 option(BUILD_TESTS "Build tests" ON)
 if(BUILD_TESTS)
-	include(cmake/testing.cmake)
+	include(CTest)
+	add_subdirectory(src/configuration/test)
 endif()
 
 #--------------
